--- a/Staff.DAL/Staff.DAL.csproj
+++ b/Staff.DAL/Staff.DAL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Triggered.AspNetCore" Version="1.1.0" />
+    <PackageReference Include="EntityFrameworkCore.Triggered" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
   </ItemGroup>
