--- a/staff-ui/package.json
+++ b/staff-ui/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.106",
     "@mui/material": "^5.10.10",
     "@mui/system": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.14",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
